# ShowNote

./: CMakeLists.txt  README  ShowNote.files  ShowNote.includes  main.cpp  mode.hpp  showman.cpp  showman.hpp  statemap.cpp  statemap.hpp  textmap.cpp  textmap.hpp  widget.cpp  widget.h  widget.hpp  widget.ui
